--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <main id="page">
     <!-- Hero / About -->
     <header id="hero">
-      <div class="boxed2"><img src="./a3.jpg" id="photo" alt="Photo of Mitali Bafna" /></div>
+      <div class="boxed2"><img src="./b.jpg" id="photo" alt="Photo of Mitali Bafna" /></div>
       <div id="logo">
         <p>mitalibafna at gmail dot com</p>
         <p>mitalib at cs dot washington dot edu</p>
