--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
     <header id="hero">
       <div class="boxed2"><img src="./b.jpg" id="photo" alt="Photo of Mitali Bafna" /></div>
       <div id="logo">
+        <p>Email: </p>
         <p>mitalibafna at gmail dot com</p>
         <p>mitalib at cs dot washington dot edu</p>
-        <p>Gates Center 211</p>
+        <p>Office: Gates Center 211</p>
       </div>
     </header>
 
