--- a/index.html
+++ b/index.html
@@ -76,11 +76,9 @@
   <main id="page">
     <!-- Hero / About -->
     <header id="hero">
-      <div class="boxed2"><img src="./b.jpg" id="photo" alt="Photo of Mitali Bafna" /></div>
+      <div class="boxed2"><img src="./c.jpg" id="photo" alt="Photo of Mitali Bafna" /></div>
       <div id="logo">
-        <p>Email: </p>
-        <p>mitalibafna at gmail dot com</p>
-        <p>mitalib at cs dot washington dot edu</p>
+        <p>Email: mitalib at cs dot washington dot edu</p>
         <p>Office: Gates Center 211</p>
       </div>
     </header>
