--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     /* Top pane */
     .top-pane { position: sticky; top: 0; z-index: 1000; background: rgba(255,255,255,0.92); backdrop-filter: saturate(180%) blur(10px); border-bottom: 1px solid var(--line); }
-    .top-pane .wrap {$1gap: 9px;
+    .top-pane .wrap {$1gap: 9px; }
     .brand { font-weight: 700; letter-spacing:.2px; }
     .spacer { flex: 1; }
     .nav { display: flex; gap: 10px; flex-wrap: wrap; }
