--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       <h2 id="service-heading">Service</h2>
       <ul class="clean">
         <li><strong>PC Member:</strong> STOC 2025</li>
-        <li>Co-organized <a class="paper-link" href="https://sites.google.com/view/hdx-stoc2025/" target="_blank" rel="noopener">HDX Workshop at STOC, 2025</a> (with Max Hopkins, Yotam Dikstein &amp; Dor Minzer)</li>
+        <li>Co-organized <a class="paper-link" href="https://sites.google.com/view/hdx-stoc2025/" target="_blank" rel="noopener">HDX Workshop at STOC 2025</a> (with Max Hopkins, Yotam Dikstein &amp; Dor Minzer)</li>
       </ul>
     </section>
 
