--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     <section id="service" aria-labelledby="service-heading">
       <h2 id="service-heading">Service</h2>
       <ul class="clean">
-        <li><strong>PC Member:</strong> STOC 2025</li>
+        <li>PC Member: STOC 2025</li>
         <li>Co-organized <a class="paper-link" href="https://sites.google.com/view/hdx-stoc2025/">HDX Workshop at STOC 2025</a> (with Max Hopkins, Yotam Dikstein &amp; Dor Minzer)</li>
       </ul>
     </section>
