--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <link rel="stylesheet" href="style.css" type="text/css" />
   <style>
     /* Minimal styles for the top pane/nav and anchor behavior. */
-    :root { --ink:#111; --muted:#666; --accent:#5b21b6; --line:#e5e7eb; --bg:#ffffff; }
+    :root { --ink:#111; --muted:#666; --accent:#5b21b6; --line:#e5e7eb; --bg:#ffffff; --sticky-h:64px; }
     html { scroll-behavior: smooth; }
     body { margin:0; color:var(--ink); background:var(--bg); font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
 
     /* Top pane */
     .top-pane { position: sticky; top: 0; z-index: 1000; background: rgba(255,255,255,0.92); backdrop-filter: saturate(180%) blur(10px); border-bottom: 1px solid var(--line); }
-    .top-pane .wrap { max-width: 980px; margin: 0 auto; padding: 10px 16px 10px 8px; display: flex; align-items: center; gap: 12px; }
+    .top-pane .wrap { max-width: 980px; margin: 0 auto; padding: 10px 16px 10px 8px; display: flex; align-items: center; gap: 12px; min-height: var(--sticky-h); }
     .brand { font-weight: 700; letter-spacing:.2px; }
     .spacer { flex: 1; }
     .nav { display: flex; gap: 14px; flex-wrap: wrap; }
@@ -22,28 +22,30 @@
 
     /* Layout */
     #page { max-width: 980px; margin: 24px auto; padding: 0 16px 48px 8px; }
-    header#hero { display: grid; grid-template-columns: 286px 1fr; gap: 24px; align-items: center; }
+    header#hero { display: grid; grid-template-columns: 286px 1fr; gap: 24px; align-items: center; margin-bottom: 6px; }
     #photo { width: 286px; height: 286px; object-fit: cover; border-radius: 14px; box-shadow: 0 2px 16px rgba(0,0,0,.08); }
     #logo h1 { margin: 0 0 6px 0; font-size: 28px; }
     #logo p { margin: 0; color: var(--muted); }
 
     section { margin-top: 28px; }
     #about { margin-top: 6px; }
-    header#hero { margin-bottom: 6px; }
     #about .boxed { margin-top: 0; }
     #about .boxed p:first-child { margin-top: 12px; }
     section h2 { margin: 0 0 12px 0; font-size: 22px; }
-    /* Prevent anchor from hiding under the sticky pane */
-    section, header#hero { scroll-margin-top: 48px; }
+
+    /* Ensure anchored sections aren't hidden behind sticky pane */
+    section, header#hero { scroll-margin-top: calc(var(--sticky-h) + 8px); }
 
     /* Lists */
     ul.clean { list-style: none; padding-left: 0; margin: 0; }
     ul.clean li { margin-block: 1.5px; line-height: 1.22; }
-    #publications ul.clean { margin-block: 0; }
-    #publications ul.clean li { margin-block: 1.5px; line-height: 1.22; }
+
+    /* Publication item formatting: remove manual &nbsp; indents */
+    .pub .meta, .pub .venue { display: block; padding-left: 1rem; }
+    .venue { color: var(--muted); }
+
     .paper-link { color: DarkViolet; text-decoration: none; }
     .paper-link:hover, .paper-link:focus { text-decoration: underline; }
-    .venue { color: var(--muted); }
     .award { color: #DD5E33; font-weight: 600; }
     .note.recruit { color: #6B8E23; font-weight: 600; }
 
@@ -51,6 +53,7 @@
       header#hero { grid-template-columns: 1fr; }
       #photo { width: 208px; height: 208px; }
     }
+
     /* Optional: skip link for accessibility */
     .skip { position:absolute; left:-9999px; top:auto; width:1px; height:1px; overflow:hidden; }
     .skip:focus { position: static; width:auto; height:auto; padding:8px; background:#fff; border:1px solid var(--line); border-radius:8px; }
@@ -102,117 +105,117 @@
     <section id="publications" aria-labelledby="pubs-heading">
       <h2 id="pubs-heading">Publications</h2>
       <ul class="clean">
-<li>
-  <a class="paper-link" href="https://arxiv.org/abs/2407.12762">Quasi-Linear Size PCPs with Small Soundness from HDX.</a><br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Dor Minzer and Nikhil Vyas (Appendix D by Zhiwei Yun)<br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;STOC 2025 <span class="award">(Best Paper Award)</span>
-</li>
-<li>
-  <a class="paper-link" href="https://arxiv.org/abs/2405.10238">Rounding Large Independent Sets on Expanders.</a><br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Tim Hsieh and Pravesh Kothari<br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;STOC 2025
-</li>
-<li>
-  <a class="paper-link" href="https://arxiv.org/abs/2501.00337">Constant Degree Networks for Almost-Everywhere Reliable Transmission.</a><br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Dor Minzer<br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;STOC 2025
-</li>
-<li>
-  <a class="paper-link" href="https://dl.acm.org/doi/10.1145/3717823.3718257">Near Optimal Constant Inapproximability under ETH for Fundamental Problems in Parameterized Complexity.</a><br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Karthik C. S. and Dor Minzer<br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;STOC 2025
-</li>
-<li>
-  <a class="paper-link" href="https://arxiv.org/abs/2411.12438">Dimension Reduction via Sum-of-Squares and Improved Clustering Algorithms for Non-Spherical Mixtures.</a><br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Prashanti Anderson, Rares-Darius Buhai, Pravesh Kothari and David Steurer
-</li>
-<li>
-  <a class="paper-link" href="https://eccc.weizmann.ac.il/report/2024/020/">Constant Degree Direct Product Testers with Small Soundness.</a><br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Noam Lifshitz and Dor Minzer<br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;FOCS 2024
-</li>
-<li>
-  <a class="paper-link" href="https://arxiv.org/abs/2308.09668">Characterizing Direct Product Testing via Coboundary Expansion.</a><br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Dor Minzer<br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;STOC 2024
-</li>
-<li>
-  <a class="paper-link" href="https://arxiv.org/abs/2304.07284">Solving Unique Games over Globally Hypercontractive Graphs.</a><br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Dor Minzer<br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CCC 2024
-</li>
-<li>
-  <a class="paper-link" href="https://arxiv.org/abs/2208.00122">Polynomial-Time Power-Sum Decomposition of Polynomials.</a><br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Tim Hsieh, Pravesh Kothari and Jeff Xu<br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;FOCS 2022
-</li>
-<li>
-  <a class="paper-link" href="https://arxiv.org/abs/2111.09444">Hypercontractivity on High Dimensional Expanders: a Local-to-Global Approach for Higher Moments.</a><br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Max Hopkins, Tali Kaufman and Shachar Lovett<br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;STOC 2022
-</li>
-<li>
-  <a class="paper-link" href="https://arxiv.org/abs/2011.04658">High Dimensional Expanders: Eigenstripping, Pseudorandomness, and Unique Games.</a><br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Max Hopkins, Tali Kaufman and Shachar Lovett<br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SODA 2022
-</li>
-<li>
-  <a class="paper-link" href="https://arxiv.org/abs/2006.09969">Playing Unique Games on Certified Small-Set Expanders.</a><br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Boaz Barak, Pravesh Kothari, Tselil Schramm and David Steurer<br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;STOC 2021
-</li>
-<li>
-  <a class="paper-link" href="https://arxiv.org/abs/2106.13210">Optimal Fine-grained Hardness of Approximation of Linear Equations.</a><br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Nikhil Vyas<br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ICALP 2021
-</li>
-<li>
-  <a class="paper-link" href="https://arxiv.org/abs/1709.06036">Local decoding and testing of polynomials over grids.</a><br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Srikanth Srinivasan and Madhu Sudan<br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Random Structures and Algorithms (Journal)
-</li>
-<li>
-  <a class="paper-link" href="https://arxiv.org/abs/1907.08185">Imperfect Gaps in Gap-ETH and PCPs.</a><br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Nikhil Vyas<br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CCC 2019
-</li>
-<li>
-  <a class="paper-link" href="https://arxiv.org/abs/1808.08907">Communication-Rounds Tradeoffs for Common Randomness and Secret Key Generation.</a><br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Badih Ghazi, Noah Golowich and Madhu Sudan<br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SODA 2019
-</li>
-<li>
-  <a class="paper-link" href="https://arxiv.org/abs/1812.05013">Thwarting Adversarial Examples: An L_0-Robust Sparse Fourier Transform.</a><br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Jack Murtagh and Nikhil Vyas<br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NeurIPS 2018
-</li>
-<li>
-  <a class="paper-link" href="https://arxiv.org/abs/1702.02970">The Price of Selection in Differential Privacy.</a><br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Jonathan Ullman<br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;COLT 2017
-</li>
-<li>
-  <a class="paper-link" href="https://eccc.weizmann.ac.il/report/2016/132/">On the Sensitivity Conjecture for Read-k Formulas.</a><br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Satyanarayana V. Lokam, Sébastien Tavenas and Ameya Velingker<br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MFCS 2016
-</li>
-</ul>
+        <li class="pub">
+          <a class="paper-link" href="https://arxiv.org/abs/2407.12762">Quasi-Linear Size PCPs with Small Soundness from HDX.</a>
+          <div class="meta">with Dor Minzer and Nikhil Vyas (Appendix D by Zhiwei Yun)</div>
+          <div class="venue">STOC 2025 <span class="award">(Best Paper Award)</span></div>
+        </li>
+        <li class="pub">
+          <a class="paper-link" href="https://arxiv.org/abs/2405.10238">Rounding Large Independent Sets on Expanders.</a>
+          <div class="meta">with Tim Hsieh and Pravesh Kothari</div>
+          <div class="venue">STOC 2025</div>
+        </li>
+        <li class="pub">
+          <a class="paper-link" href="https://arxiv.org/abs/2501.00337">Constant Degree Networks for Almost-Everywhere Reliable Transmission.</a>
+          <div class="meta">with Dor Minzer</div>
+          <div class="venue">STOC 2025</div>
+        </li>
+        <li class="pub">
+          <a class="paper-link" href="https://dl.acm.org/doi/10.1145/3717823.3718257">Near Optimal Constant Inapproximability under ETH for Fundamental Problems in Parameterized Complexity.</a>
+          <div class="meta">with Karthik C. S. and Dor Minzer</div>
+          <div class="venue">STOC 2025</div>
+        </li>
+        <li class="pub">
+          <a class="paper-link" href="https://arxiv.org/abs/2411.12438">Dimension Reduction via Sum-of-Squares and Improved Clustering Algorithms for Non-Spherical Mixtures.</a>
+          <div class="meta">with Prashanti Anderson, Rares-Darius Buhai, Pravesh Kothari and David Steurer</div>
+        </li>
+        <li class="pub">
+          <a class="paper-link" href="https://eccc.weizmann.ac.il/report/2024/020/">Constant Degree Direct Product Testers with Small Soundness.</a>
+          <div class="meta">with Noam Lifshitz and Dor Minzer</div>
+          <div class="venue">FOCS 2024</div>
+        </li>
+        <li class="pub">
+          <a class="paper-link" href="https://arxiv.org/abs/2308.09668">Characterizing Direct Product Testing via Coboundary Expansion.</a>
+          <div class="meta">with Dor Minzer</div>
+          <div class="venue">STOC 2024</div>
+        </li>
+        <li class="pub">
+          <a class="paper-link" href="https://arxiv.org/abs/2304.07284">Solving Unique Games over Globally Hypercontractive Graphs.</a>
+          <div class="meta">with Dor Minzer</div>
+          <div class="venue">CCC 2024</div>
+        </li>
+        <li class="pub">
+          <a class="paper-link" href="https://arxiv.org/abs/2208.00122">Polynomial-Time Power-Sum Decomposition of Polynomials.</a>
+          <div class="meta">with Tim Hsieh, Pravesh Kothari and Jeff Xu</div>
+          <div class="venue">FOCS 2022</div>
+        </li>
+        <li class="pub">
+          <a class="paper-link" href="https://arxiv.org/abs/2111.09444">Hypercontractivity on High Dimensional Expanders: a Local-to-Global Approach for Higher Moments.</a>
+          <div class="meta">with Max Hopkins, Tali Kaufman and Shachar Lovett</div>
+          <div class="venue">STOC 2022</div>
+        </li>
+        <li class="pub">
+          <a class="paper-link" href="https://arxiv.org/abs/2011.04658">High Dimensional Expanders: Eigenstripping, Pseudorandomness, and Unique Games.</a>
+          <div class="meta">with Max Hopkins, Tali Kaufman and Shachar Lovett</div>
+          <div class="venue">SODA 2022</div>
+        </li>
+        <li class="pub">
+          <a class="paper-link" href="https://arxiv.org/abs/2006.09969">Playing Unique Games on Certified Small-Set Expanders.</a>
+          <div class="meta">with Boaz Barak, Pravesh Kothari, Tselil Schramm and David Steurer</div>
+          <div class="venue">STOC 2021</div>
+        </li>
+        <li class="pub">
+          <a class="paper-link" href="https://arxiv.org/abs/2106.13210">Optimal Fine-grained Hardness of Approximation of Linear Equations.</a>
+          <div class="meta">with Nikhil Vyas</div>
+          <div class="venue">ICALP 2021</div>
+        </li>
+        <li class="pub">
+          <a class="paper-link" href="https://arxiv.org/abs/1709.06036">Local decoding and testing of polynomials over grids.</a>
+          <div class="meta">with Srikanth Srinivasan and Madhu Sudan</div>
+          <div class="venue">Random Structures and Algorithms (Journal)</div>
+        </li>
+        <li class="pub">
+          <a class="paper-link" href="https://arxiv.org/abs/1907.08185">Imperfect Gaps in Gap-ETH and PCPs.</a>
+          <div class="meta">with Nikhil Vyas</div>
+          <div class="venue">CCC 2019</div>
+        </li>
+        <li class="pub">
+          <a class="paper-link" href="https://arxiv.org/abs/1808.08907">Communication-Rounds Tradeoffs for Common Randomness and Secret Key Generation.</a>
+          <div class="meta">with Badih Ghazi, Noah Golowich and Madhu Sudan</div>
+          <div class="venue">SODA 2019</div>
+        </li>
+        <li class="pub">
+          <a class="paper-link" href="https://arxiv.org/abs/1812.05013">Thwarting Adversarial Examples: An L_0-Robust Sparse Fourier Transform.</a>
+          <div class="meta">with Jack Murtagh and Nikhil Vyas</div>
+          <div class="venue">NeurIPS 2018</div>
+        </li>
+        <li class="pub">
+          <a class="paper-link" href="https://arxiv.org/abs/1702.02970">The Price of Selection in Differential Privacy.</a>
+          <div class="meta">with Jonathan Ullman</div>
+          <div class="venue">COLT 2017</div>
+        </li>
+        <li class="pub">
+          <a class="paper-link" href="https://eccc.weizmann.ac.il/report/2016/132/">On the Sensitivity Conjecture for Read-k Formulas.</a>
+          <div class="meta">with Satyanarayana V. Lokam, Sébastien Tavenas and Ameya Velingker</div>
+          <div class="venue">MFCS 2016</div>
+        </li>
+      </ul>
     </section>
 
     <!-- Teaching -->
     <section id="teaching" aria-labelledby="teaching-heading">
       <h2 id="teaching-heading">Teaching</h2>
       <ul class="clean">
-<li><strong>Fall 2025:</strong> CSE 431 - Undergrad Complexity Theory, UW</li>
-<li><strong>Spring 2025:</strong> 18.200 - Principles of Discrete Math, MIT (Recitation Leader, Instructor: Peter Shor)</li>
-<li><strong>Fall 2024:</strong> 18.424 - Undergraduate Seminar in Information Theory, MIT</li>
-<li><strong>Spring 2024:</strong> 18.200 - Principles of Discrete Math, MIT (Recitation Leader, Instructors: Peter Shor &amp; Ankur Moitra)</li>
-<li><strong>Fall 2023:</strong> 18.01 - Single Variable Calculus, MIT (Recitation Leader, Instructor: Prof. Larry Guth)</li>
-<li><strong>Spring 2019:</strong> CS229r - Information Theory in Computer Science, Harvard (TA, Instructor: Prof. Madhu Sudan)</li>
-</ul>
+        <li><strong>Fall 2025:</strong> CSE 431 - Undergrad Complexity Theory, UW</li>
+        <li><strong>Spring 2025:</strong> 18.200 - Principles of Discrete Math, MIT (Recitation Leader, Instructor: Peter Shor)</li>
+        <li><strong>Fall 2024:</strong> 18.424 - Undergraduate Seminar in Information Theory, MIT</li>
+        <li><strong>Spring 2024:</strong> 18.200 - Principles of Discrete Math, MIT (Recitation Leader, Instructors: Peter Shor &amp; Ankur Moitra)</li>
+        <li><strong>Fall 2023:</strong> 18.01 - Single Variable Calculus, MIT (Recitation Leader, Instructor: Prof. Larry Guth)</li>
+        <li><strong>Spring 2019:</strong> CS229r - Information Theory in Computer Science, Harvard (TA, Instructor: Prof. Madhu Sudan)</li>
+      </ul>
     </section>
 
-    <!-- Expositions -->
+    <!-- Service -->
     <section id="service" aria-labelledby="service-heading">
       <h2 id="service-heading">Service</h2>
       <ul class="clean">
