--- a/index.html
+++ b/index.html
@@ -67,12 +67,7 @@ section h2 {
 ul.clean li { 
   margin-block: 0px; /* no extra margin between items */
   line-height: 1.0;  /* tighter lines */
-}
-
-/* Publications specifically */
-#publications ul.clean li {
-  margin-block: 0px;
-  line-height: 1.0;
+  margin-bottom: 0.25em
 }
 
     #publications {position: relative;left: -19px; }
