--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ section h2 {
 
 /* Lists */
 ul.clean li { 
+  margin-bottom: 0.125em
   margin-block: 0px; /* no extra margin between items */
   line-height: 1.0;  /* tighter lines */
   margin-bottom: 0.125em
