--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@ section h2 {
 
 /* Lists */
 ul.clean li { 
-  margin-bottom: 0.125em
+  margin-top: 0.1em;
   margin-block: 0px; /* no extra margin between items */
   line-height: 1.0;  /* tighter lines */
-  margin-bottom: 0.125em
+  margin-bottom: 0.1em
 }
 
     #publications {position: relative;left: -19px; }
