--- a/index.html
+++ b/index.html
@@ -64,11 +64,10 @@ section h2 {
 }
 
 /* Lists */
-ul.clean li { 
-  margin-top: 0.01em;
-  margin-block: 0px; /* no extra margin between items */
-  line-height: 1.0;  /* tighter lines */
-  margin-bottom: 0.01em
+ul.clean li {
+  margin: 0;          /* remove vertical margin completely */
+  padding: 0;         /* avoid extra padding */
+  line-height: 1.0;  /* very tight line spacing */
 }
 
     #publications {position: relative;left: -19px; }
