--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@ section h2 {
 
 /* Lists */
 ul.clean li {
-  margin: -1;          /* remove vertical margin completely */
-  padding: -1;         /* avoid extra padding */
+  margin: -10px;          /* remove vertical margin completely */
+  padding: 0;         /* avoid extra padding */
   line-height: 1.0;  /* very tight line spacing */
 }
 
